ADD: Auth Swagger Documentation
